林建威 第七章 未来期望完成的功能

--- a/第七章 未来期望完成的功能.md
+++ b/第七章 未来期望完成的功能.md
@@ -12,7 +12,7 @@
 <p style="font-size:16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;先在不同的地点进行测试，看下哪个地方用这款系统人群比较多，然后选择地点进行长期的服务。</p>
 
 ### 7.5.2软件的安全性
-<p style="font-size:16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由于本产品还在初期阶段开发简便，门槛不高难免被人仿造，除了加强打假力度之外，不断升级产品也是拓展市场的必要手段。我们也会不定期对产品进行维护增强平台的安全性。</p>
+<p style="font-size:16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由于本产品还在初期阶段开发简便，门槛不高难免被人仿造，除了加强打假力度之外，不断升级产品也是拓展市场的必要手段。我们也会不定期对产品进行维护增强平台的安全性</p>
 
 ### 7.5.2上述方案的好处
 
